@@ -4,6 +4,10 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04a: *********************************
 
+IMP: (09/30/05, SMR) Schematic DRC no longer checks for overlap of graphics.
+
+IMP: (09/30/05, SMR) "Layers" preferences panel has intelligent "outline" checkboxes.
+
 BUG: (09/30/05, SMR) Crossprobing from the schematics to the waveform window takes too long (Bug #583).
 FIX: Use hash tables to optimize name lookup.
 
